--- a/Homework.ipynb
+++ b/Homework.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 准备工作"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -13,6 +25,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -197,7 +219,7 @@
     }
    ],
    "source": [
-    "sns.scatterplot(data=data,x='GDP_per_capita',y='Life_expectancy',hue='Continent')"
+    "sns.scatterplot(data=data,x='GDP_per_capita',y='Life_expectancy',hue='Continent')\n"
    ],
    "metadata": {
     "collapsed": false,
