--- a/Homework.ipynb
+++ b/Homework.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 数据导入\n",
     "### 准备工作"
    ],
    "metadata": {
@@ -23,32 +24,22 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format='retina'\n",
+    "plt.style.use('ggplot')"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format='retina'\n",
-    "plt.style.use('ggplot')"
+    "### 读取文件、数据查看与描述"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
@@ -68,12 +59,82 @@
    ],
    "source": [
     "data = pd.read_csv('WorldIndex.csv')\n",
-    "data.head()"
+    "data.head() # 查看前五行"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 164 entries, 0 to 163\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Country          164 non-null    object \n",
+      " 1   Continent        164 non-null    object \n",
+      " 2   Life_expectancy  164 non-null    float64\n",
+      " 3   GDP_per_capita   164 non-null    float64\n",
+      " 4   Population       164 non-null    int64  \n",
+      "dtypes: float64(2), int64(1), object(2)\n",
+      "memory usage: 6.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info() # 查看数据信息"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Life_expectancy  GDP_per_capita    Population\ncount       164.000000      164.000000  1.640000e+02\nmean         71.301273    12783.970324  4.253911e+07\nstd           8.511990    17966.848134  1.521931e+08\nmin          48.873951      303.681022  9.341900e+04\n25%          65.340945     1690.241839  2.774335e+06\n50%          73.650537     4961.785567  9.569478e+06\n75%          77.133335    14536.831557  2.917300e+07\nmax          83.843659   101909.822300  1.371220e+09",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Life_expectancy</th>\n      <th>GDP_per_capita</th>\n      <th>Population</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>164.000000</td>\n      <td>164.000000</td>\n      <td>1.640000e+02</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>71.301273</td>\n      <td>12783.970324</td>\n      <td>4.253911e+07</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>8.511990</td>\n      <td>17966.848134</td>\n      <td>1.521931e+08</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>48.873951</td>\n      <td>303.681022</td>\n      <td>9.341900e+04</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>65.340945</td>\n      <td>1690.241839</td>\n      <td>2.774335e+06</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>73.650537</td>\n      <td>4961.785567</td>\n      <td>9.569478e+06</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>77.133335</td>\n      <td>14536.831557</td>\n      <td>2.917300e+07</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>83.843659</td>\n      <td>101909.822300</td>\n      <td>1.371220e+09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe() # 数据描述"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 数据处理\n",
+    "### 按大洲分组并计算出平均值"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -117,6 +178,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 数据可视化"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
